--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
 
     <body>
-        <h2>註冊</h2>
-        <form action="" method="post"><!--如果用get，輸入後的資料會顯示在網址列-->
+        <h2>註冊</h2><!--form action為要把數據以url名稱傳到伺服器裡面-->
+        <form  method="POST" action="/built_account"><!--如果用get，輸入後的資料會顯示在網址列-->
             <fieldset><!--表單內容集合邊框-->
                 <legend>個人資料</legend><!--集合資料名稱-->
                     <label for="yourpic">上傳你自己的頭像</label><br>
